update image size

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
                         Clients are always part of the team to assure project satisfaction.</p>
                 </div>
                 <div>
-                    <img src="assets/images/lee-campbell-DtDlVpy-vvQ-unsplash (1).jpg" alt="" class="center">
+                    <img src="assets/images/lee-campbell-DtDlVpy-vvQ-unsplash (1).jpg" alt="">
                 </div>
             </div>
             <!-- website design -->
             <div class="py-5 grid">
                 <div>
-                    <img src="assets/images/domenico-loia-hGV2TfOh0ns-unsplash (1).jpg" alt="" class="center">
+                    <img src="assets/images/domenico-loia-hGV2TfOh0ns-unsplash (1).jpg" alt="">
                 </div>
                 <div>
                     <h2>Website Design</h2>
@@ -145,7 +145,7 @@
                         optimizing websites regularly, ensuring that it is fast, secure and user-friendly.</p>
                 </div>
                 <div>
-                    <img src="assets/images/christin-hume-Hcfwew744z4-unsplash (1).jpg" alt="" class="center">
+                    <img src="assets/images/christin-hume-Hcfwew744z4-unsplash (1).jpg" alt="">
                 </div>
             </div>
         </div>
