--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
                 </a>
             </div>
 
-            <div class="text-center pt-3"><a href="mailto:kevdvlpr@gmail.com" class="btn-secondary">Let Us Build A
-                    Project</a></div>
+            <div class="text-center pt-3"><a href="projects.html" class="btn-secondary">View All</a></div>
 
             <!-- Testimonials -->
             <!-- <div class="testimonial grid py-3 pt-5">
@@ -210,11 +209,11 @@
             <div>
                 <ul class="flex">
                     <li><a href="https://join.skype.com/invite/jAHdOrvztILL" target="_blank"><i class="fa fa-skype "
-                                aria-hidden="true"></i>Skype</a></li>
+                                aria-hidden="true"></i></a></li>
                     <li><a href="https://www.instagram.com/kevdvlpr/" target="_blank"><i class="fa fa-instagram "
-                                aria-hidden="true"></i>Instagram</a></li>
+                                aria-hidden="true"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/kevram/" target="_blank"><i class="fa fa-linkedin "
-                                aria-hidden="true"></i>LinkedIn</a></li>
+                                aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
