add existing project to git

--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,10 @@
             </a>
             <div>
                 <ul class="flex">
-                    <a href="#services">
+                    <a href="index.html/#services">
                         <li>Services</li>
                     </a>
-                    <a href="#projects">
+                    <a href="index.html/#projects">
                         <li>Projects</li>
                     </a>
                     <a href="mailto:kevdvlpr@gmail.com" class="btn-secondary">Contact</a>
@@ -42,7 +42,7 @@
     <section class="projects py-5">
         <div class="container text-center">
             <h1 class="h2">Projects</h1>
-            <p>Professionally built websites for amazing clients.</p>
+            <p class="pt-1">Professionally built websites for amazing clients.</p>
             <div class="grid pt-3">
                 <div class="col-recent"></div>
                 <div class="col-2"></div>
@@ -72,8 +72,9 @@
                 <div class="col-16"></div>
                 <div class="col-17"></div>
             </div>
-
-            <a href="mailto:kevdvlpr@gmail.com" class="btn-primary">Work With Me</a>
+            <div class="btn_div">
+            <a href="mailto:kevdvlpr@gmail.com" class="btn-secondary">Work With Me</a>
+        </div>
         </div>
     </section>
 
