--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </a>
             <div>
                 <ul class="flex">
-                    <a href="#services">
+                    <a href="index.html/#services">
                         <li>Services</li>
                     </a>
-                    <a href="#projects">
+                    <a href="index.html/#projects">
                         <li>Projects</li>
                     </a>
                     <a href="mailto:kevdvlpr@gmail.com" class="btn-secondary">Contact</a>
