--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,10 @@
             </a>
             <div>
                 <ul class="flex">
-                    <a href="index.html/#services">
+                    <a href="/#services">
                         <li>Services</li>
                     </a>
-                    <a href="index.html/#projects">
+                    <a href="/#projects">
                         <li>Projects</li>
                     </a>
                     <a href="mailto:kevdvlpr@gmail.com" class="btn-secondary">Contact</a>
