--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <!-- Navigation -->
     <section class="py-1 navigation">
         <div class="navbar flex container">
-            <a href="#">
+            <a href="/">
                 <h2>Portfolio</h2>
             </a>
             <div>
                 <ul class="flex">
-                    <a href="/#services">
+                    <a href="#services">
                         <li>Services</li>
                     </a>
-                    <a href="/#projects">
+                    <a href="#projects">
                         <li>Projects</li>
                     </a>
                     <a href="mailto:kevdvlpr@gmail.com" class="btn-secondary">Contact</a>
