update home link

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
     <!-- Navigation -->
     <section class="py-1 navigation">
         <div class="navbar flex container">
-            <a href="#">
+            <a href="index.html">
                 <h2>Portfolio</h2>
             </a>
             <div>
