--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navigation -->
     <section class="py-1 navigation">
         <div class="navbar flex container">
-            <a href="/">
+            <a href="#">
                 <h2>Portfolio</h2>
             </a>
             <div>
