added floating icon

--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
 
     <!-- Footer -->
     <section class="footer-sect py-1">
+        <div class="floating_icon">
+           <a href="#"> <i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+        </div>
         <div class="container flex footer">
             <div>
                 <p>© 2023 Kevin, All rights reserved.</p>
