--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,9 @@
     <!-- Footer -->
     <section class="footer-sect py-1">
         <div class="container flex footer">
+            <div class="floating_icon">
+                <a href="#"> <i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+             </div>
             <div>
                 <p>© 2023 Kevin, All rights reserved.</p>
             </div>
